# TizenFX

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AppFW.sln  CODEOWNERS  LICENSE  LICENSE.BSD-2-Clause  LICENSE.BSD-3-Clause  LICENSE.MIT  LICENSE.OpenTK  Makefile  PULL_REQUEST_TEMPLATE.md  README.html  README.md  Tizen.Applications.sln  Tizen.Content.MediaContent.sln  Tizen.Content.MimeType.sln  Tizen.Messaging.Push.sln  Tizen.Multimedia.sln  Tizen.NUI.Samples  Tizen.NUI.sln  Tizen.Security.sln  Tizen.System.Sensor.sln  Tizen.System.Sensor.userprefs  Tizen.System.SystemSettings.sln  Tizen.System.sln  Tizen.Tapi.sln  Tizen.sln  Tizen.userprefs  application.csproj  build.cmd  build.sh  clean.sh  commits  coverage.sh  coverage_ubuntu.sh  download.sln  index-API4.json  (+16 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  branch-metadata.yml
API10/: index.html
API11/: index.html
API12/: index.html
API13/: index.html
API14/: index.html
API4/: index.html
API5/: index.html
API6/: index.html
API7/: index.html
API8/: index.html
API9/: index.html
ElmSharpTest/: ElmSharpTest.csproj  ElmSharpTest.project.json  ElmSharpTest.xproj  TestCaseBase.cs  project.json  test.sh
MediaContentTest/: MediaContentTest.cs  MediaContentTest.csproj
NUISample2/: NUISample2.sln
NUISamples/: NUISamples.sln
NUIsamples/: NUIsamples.sln
Properties/: AssemblyInfo.cs
Tizen.Application/: AppControl.cs  Application.cs  Page.cs  Tizen.Application.csproj  Tizen.Application.snk  TizenSynchronizationContext.cs
Tizen.Applications/: CustomDictionary.xml  GlobalSuppressions.cs  Tizen.Applications.Forwards.cs  Tizen.Applications.Net45.csproj  Tizen.Applications.csproj  Tizen.Applications.nuspec  Tizen.Applications.project.json
Tizen.Bluetooth/: Tizen.Bluetooth.Net45.csproj  Tizen.Bluetooth.csproj  Tizen.Bluetooth.nuspec
Tizen.Content/: Tizen.Content.MediaContent.csproj  Tizen.Content.csproj
Tizen.Internals/: CoreFx.References.targets  CustomDictionary.xml  Tizen.Internals.csproj  Tizen.Internals.snk
Tizen.Messaging/: Tizen.Messaging.csproj
Tizen.NUI.ExtTEST/: Tizen.NUI.ExtTEST.sln
Tizen.Nfc/: Tizen.Nfc.Net45.csproj  Tizen.Nfc.csproj  Tizen.Nfc.nuspec
Tizen.Smartcard/: Tizen.Smartcard.Net45.csproj  Tizen.Smartcard.csproj  Tizen.Smartcard.nuspec
Tizen.System.Sensor/: Tizen.System.Sensor.Net45.csproj  Tizen.System.Sensor.csproj  Tizen.System.Sensor.nuspec  Tizen.System.Sensor.pidb  Tizen.System.Sensor.project.json  Tizen.System.Sensor.snk
Tizen.UI/: Tizen.UI.csproj
Tizen.Uix/: Tizen.Uix-Stt.csproj  Tizen.Uix-Stt.nuspec  Tizen.Uix-Stt.project.lock.json  Tizen.Uix-SttNet45.csproj  Tizen.Uix-Tts.csproj  Tizen.Uix-Tts.nuspec  Tizen.Uix-TtsNet45.csproj
api/: ElmSharp.Accessible.AccessibleInfoProvider.html  ElmSharp.Accessible.AccessibleObject.html  ElmSharp.Accessible.ControlledBy.html  ElmSharp.Accessible.Embeds.html  ElmSharp.Accessible.FlowsTo.html  ElmSharp.Accessible.html  (+283 more)
test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/: .gitignore  CMakeLists.txt  LICENSE
test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/include/: app_common.h
test/NUITestSample/NUIUbuntuTest/tizenfx-stub-devel-master/src/: app-common.c  app-manager.c  app_context.h  app_info.h  app_manager.h  app_manager_extension.h  app_manager_internal.h  dlog.c  dlog.h  package-manager.h  tizen.h  tizen_error.h  tizen_type.h
(+59428 files in other folders)
