CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(MAJORVER 0)
SET(FULLVER 1)

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(VERSION ${FULLVER})

SET(LIB_INSTALL_DIR ${PREFIX}/lib)

PROJECT(app_common C)

#AUX_SOURCE_DIRECTORY(src SOURCES)
SET(CAPI_APPFW_APP_COMMON_SOURCES src/app-common.c)
SET(CAPI_APPFW_APP_MANAGER_SOURCES src/app-manager.c)
SET(DLOG_SOURCES src/dlog.c)

ADD_DEFINITIONS("-DSHARE_PREFIX=\"${SHARE_INSTALL_PREFIX}/aul\"")

# Set required packages
INCLUDE(FindPkgConfig)
#SET(APPCOMMON_LIB_PKG_CHECK_MODULES )
#pkg_check_modules(libpkgs REQUIRED ${APPCOMMON_LIB_PKG_CHECK_MODULES})

#FOREACH(flag ${libpkgs_CFLAGS})
#	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
#ENDFOREACH(flag)

#pkg_check_modules(APP_LAUNCHER_DEPS glib-2.0 pkgmgr-info bundle)
#FOREACH(APP_LAUNCHER_FLAGS ${APP_LAUNCHER_DEPS_CFLAGS})
#	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${APP_LAUNCHER_FLAGS}")
#ENDFOREACH(APP_LAUNCHER_FLAGS)

# Compiler flags
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Wl,-zdefs" )
#SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fpic -fPIC")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")
SET(CMAKE_SKIP_BUILD_RPATH true)
# Linker flags
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -fPIC")

# APP_COMMON
add_library(capi-appfw-app-common SHARED ${CAPI_APPFW_APP_COMMON_SOURCES})
TARGET_LINK_LIBRARIES(capi-appfw-app-common ${libpkgs_LDFLAGS})
SET_TARGET_PROPERTIES(capi-appfw-app-common PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(capi-appfw-app-common PROPERTIES VERSION ${FULLVER})
INSTALL(TARGETS capi-appfw-app-common DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)

# APP_MANAGER
add_library(capi-appfw-app-manager SHARED ${CAPI_APPFW_APP_MANAGER_SOURCES})
TARGET_LINK_LIBRARIES(capi-appfw-app-manager ${libpkgs_LDFLAGS})
SET_TARGET_PROPERTIES(capi-appfw-app-manager PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(capi-appfw-app-manager PROPERTIES VERSION ${FULLVER})
INSTALL(TARGETS capi-appfw-app-manager DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)

# DLOG
add_library(dlog SHARED ${DLOG_SOURCES})
TARGET_LINK_LIBRARIES(dlog ${libpkgs_LDFLAGS})
SET_TARGET_PROPERTIES(dlog PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(dlog PROPERTIES VERSION ${FULLVER})
INSTALL(TARGETS dlog DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)


# pkgconfig file
#CONFIGURE_FILE(aul.pc.in aul.pc @ONLY)
#CONFIGURE_FILE(feature/preexec_list.txt.in feature/preexec_list.txt @ONLY)

# Install headers, other files
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/app_common.h DESTINATION include/app-common)
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/aul.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/feature/preexec_list.txt DESTINATION ${SHARE_INSTALL_PREFIX}/aul )
#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data/miregex DESTINATION ${SHARE_INSTALL_PREFIX}/aul )

# tool
#ADD_SUBDIRECTORY(tool)
#ADD_SUBDIRECTORY(parser)
